--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>My Blog</title>
   </head>
   <body>
-    <iframe src="https://msc07n.mimo.run/index.html"></iframe>
+    <iframe src="https://msc07n.mimo.run/index.html" width="200" height="300"></iframe>
   </body>
 </html>
