--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
-<!DOCTYPE HTML>
+<!doctype html>
 <html>
   <head>
-    <title>My Blog</title>
+    <title>My blog - home</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <iframe src="https://msc07n.mimo.run/index.html" width="200" height="300"></iframe>
+  <h1>My blog</h1>
+  
+ <a href="/04.01.2025.html">04.01.2025</a>
+  
+ 
+    <script src="script.js"></script>
   </body>
 </html>
