--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
   <h1>My blog</h1>
   
- <a href="https://emilsan187.github.io/blog/04.01.2025.html">04.01.2025</a>
+ <a href="04.01.2025.html">04.01.2025</a>
   
  
     <script src="script.js"></script>
